--- a/Code/Web/jQuery/day06/JQuery_删除节点.html
+++ b/Code/Web/jQuery/day06/JQuery_删除节点.html
@@ -6,6 +6,16 @@
         remove
         empty
         detach 
+        ***
+        remove与detach方法的异同
+        remove
+            从DOM中删除所有匹配的元素。
+            这个方法不会把匹配的元素从jQuery对象中删除，因而可以在将来再使用这些匹配的元素。
+            但除了这个元素本身得以保留之外，其他的比如绑定的事件，附加的数据等都会被移除。
+        detach
+            从DOM中删除所有匹配的元素。
+            这个方法不会把匹配的元素从jQuery对象中删除，因而可以在将来再使用这些匹配的元素。
+            与remove()不同的是，所有绑定的事件、附加的数据等都会保留下来。 
      -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
